--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -60,8 +60,8 @@ jobs:
        
        - name: Upload GSI to BitSend
          run: |
-              curl -sL https://git.io/file-transfer | sh
-              ./transfer bit final/GSI.zip
+              curl -sL https://git.io/cowtransfer | sh
+              ./cowtransfer-uploader -s -p 8 final/GSI.zip
 
          
             
