--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -58,10 +58,8 @@ jobs:
               mkdir final
               zip -r final/GSI.zip /home/runner/work/actions_build_ErfanGSIs/actions_build_ErfanGSIs/ErfanGSIs/output/
        
-       - name: Upload GSI to BitSend
+       - name: Upload GSI to cow
          run: |
-              curl -sL https://git.io/file-transfer | sh
-              ./transfer bit final/GSI.zip
-
-         
-            
+              curl -sL https://git.io/cowtransfer | sh
+              ./cowtransfer-uploader -s -p 8 final/GSI.zip
+              ./cowtransfer-uploader -s -p 8 /home/runner/work/actions_build_ErfanGSIs/actions_build_ErfanGSIs/ErfanGSIs/output/
