--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -60,5 +60,5 @@ jobs:
        
        - name: Upload GSI to wet
          run: |
-              curl -sL https://git.io/transfer | sh
+              curl -sL https://git.io/file-transfer | sh
               ./transfer wet final/GSI.zip
