--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/21.1.13/miui_LAVENDER_21.1.13_bc1a7e1cf5_10.0.zip
+  ROM_URL: https://bigota.d.miui.com/21.1.15/miui_VIOLET_21.1.15_8e76d5fd2b_10.0.zip
   ROM_NAME: MIUI
   TZ: Asia/Shanghai
 
