--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -56,7 +56,7 @@ jobs:
        - name: Use "tar.gz" to zip GSI  
          run: |
               mkdir final
-              tar -zcvf final/GS_ABI.tar.gz /home/runner/work/actions_build_ErfanGSIs/actions_build_ErfanGSIs/ErfanGSIs/output/
+              tar -zcvf final/GSI_AB.tar.gz /home/runner/work/actions_build_ErfanGSIs/actions_build_ErfanGSIs/ErfanGSIs/output/
        
        - name: Upload GSI to wet
          run: |
@@ -69,7 +69,7 @@ jobs:
        - name: Use "tar.gz" to zip GSI  
          run: |
               mkdir final
-              tar -zcvf final/GS_AI.tar.gz /home/runner/work/actions_build_ErfanGSIs/actions_build_ErfanGSIs/ErfanGSIs/output/
+              tar -zcvf final/GSI_A.tar.gz /home/runner/work/actions_build_ErfanGSIs/actions_build_ErfanGSIs/ErfanGSIs/output/
        
        - name: Upload GSI to wet
          run: |
